--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,7 +1,5 @@
 {
-  "assets/vendor.js": "/assets/vendor.js",
-  "assets/bolt.js": "/assets/bolt.js",
-  "assets/bolt.css": "/assets/bolt.css",
-  "assets/manifest.js": "/assets/manifest.js",
+  "assets/bolt.js": "/assets/bolt.91c103d9.js",
+  "assets/bolt.css": "/assets/bolt.411897c6.css",
   "assets/images/icons.svg": "/assets/images/icons.a61f9085.svg"
 }
