--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -6,7 +6,7 @@
 #
 # If you're trying out Bolt, just keep it set to SQLite for now.
 database:
-    url: '%env(DATABASE_URL)%'
+    url: '%env(resolve:DATABASE_URL)%'
 
 # The name of the website
 sitename: A sample site in CONFIG
