--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "system"
   ],
   "bugs": {
-    "url": "https://github.com/bobdenotter/symfony-skeleton/issues"
+    "url": "https://github.com/bolt/four/issues"
   },
   "main": "webpack.config.js",
   "directories": {
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bobdenotter/symfony-skeleton.git"
+    "url": "git://github.com/bolt/four.git"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -74,7 +74,7 @@
       "eslint:recommended"
     ]
   },
-  "browserslist": [ 
+  "browserslist": [
     "> 1%"
   ]
 }
