Updating composer.json and lock shizzle

--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,9 @@
             "@auto-scripts"
         ],
         "post-update-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "npm install",
+            "npm run build"
         ]
     },
     "conflict": {
