--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "git://github.com/bolt/four.git"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.1.3",
@@ -38,6 +39,7 @@
     "selectize": "^0.12.6",
     "selectize-bootstrap4-theme": "^2.0.2",
     "simplemde": "^1.11.2",
+    "tinycolor2": "^1.4.1",
     "vue": "^2.5.17",
     "vue-flatpickr-component": "^8.0.0",
     "vue-simplemde": "^0.4.8",
@@ -61,6 +63,7 @@
     "vue-loader": "^14",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
+    "webpackbar": "^2.6.3",
     "workbox-webpack-plugin": "^3.6.2"
   },
   "scripts": {
