--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
         "nesbot/carbon": "^1.34",
+        "php-translation/symfony-bundle": "^0.8.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "siriusphp/upload": "^2.1",
