--- a/.env.dist
+++ b/.env.dist
@@ -14,7 +14,7 @@ APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 
 # SQLite
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/blog.sqlite
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
 # MySQL
 # DATABASE_URL=mysql://root:"password"@127.0.0.1:3306/bolt_skeleton
