Working on Twif filters/functions

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -46,3 +46,6 @@ services:
         arguments: ["@knp_menu.factory"]
         tags:
             - { name: knp_menu.menu_builder, method: createSidebarMenu, alias: sidebar } # The alias is what is used to retrieve the menu
+
+    # config/services.yaml
+    Twig\Extension\StringLoaderExtension:
