--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tinycolor2": "^1.4.1",
     "vue": "^2.5.17",
     "vue-flatpickr-component": "^8.0.0",
+    "vue-notification": "^1.3.13",
     "vue-simplemde": "^0.4.8",
     "vue-trumbowyg": "^3.4.0",
     "vuedraggable": "^2.16.0"
