--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,18 @@
         "sensiolabs/security-checker": "^4.1",
         "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
+        "symfony/asset": "^4.2",
+        "symfony/console": "^4.2",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.1",
-        "symfony/form": "^4.1",
-        "symfony/framework-bundle": "^4.1",
+        "symfony/form": "^4.2",
+        "symfony/framework-bundle": "^4.2",
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php72": "^1.8",
+        "symfony/serializer": "^4.2",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "^4.1",
-        "symfony/yaml": "^4.1",
+        "symfony/translation": "^4.2",
+        "symfony/yaml": "^4.2",
         "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
@@ -43,17 +44,17 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.12",
         "phpstan/phpstan": "^0.10.3",
-        "symfony/browser-kit": "^4.1",
-        "symfony/css-selector": "^4.1",
-        "symfony/debug-bundle": "^4.1",
-        "symfony/dotenv": "^4.1",
+        "symfony/browser-kit": "^4.2",
+        "symfony/css-selector": "^4.2",
+        "symfony/debug-bundle": "^4.2",
+        "symfony/dotenv": "^4.2",
         "symfony/maker-bundle": "^1.7",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/stopwatch": "^4.1",
-        "symfony/web-profiler-bundle": "^4.1",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/phpunit-bridge": "^4.2",
+        "symfony/stopwatch": "^4.2",
+        "symfony/web-profiler-bundle": "^4.2",
+        "symfony/web-server-bundle": "^4.2"
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "platform": {
@@ -95,7 +96,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "^4.1"
+            "require": "^4.2"
         }
     }
 }
