--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/serializer": "^4.2",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "^4.2",
+        "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "^4.2",
         "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
