--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "vue-notification": "^1.3.13",
     "vue-simplemde": "^0.4.9",
     "vue-trumbowyg": "^3.4.0",
-    "vuedraggable": "^2.16.0"
+    "vuedraggable": "^2.16.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
