Having `npm run` in composer.json was a fun idea, but kinda annoying. :-)

--- a/composer.json
+++ b/composer.json
@@ -86,9 +86,7 @@
             "@auto-scripts"
         ],
         "post-update-cmd": [
-            "@auto-scripts",
-            "npm install",
-            "npm run build"
+            "@auto-scripts"
         ]
     },
     "conflict": {
