fixed flag loading

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.1.3",
     "codemirror": "^5.41.0",
-    "flag-icon-css": "^3.2.1",
+    "flagkit-web": "0.0.3",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "no-scroll": "^2.1.1",
@@ -73,8 +73,6 @@
     "regenerator-runtime": "^0.12.1",
     "register-service-worker": "^1.5.2",
     "sass-loader": "^7.1.0",
-    "svgo": "^1.1.1",
-    "svgo-loader": "^2.2.0",
     "vue-jest": "^3.0.0",
     "vue-loader": "^15.0.11",
     "vue-router": "^3.0.1",
