--- a/composer.json
+++ b/composer.json
@@ -77,10 +77,13 @@
         }
     },
     "scripts": {
+        "periodical-tasks": [
+            "php-cs-fixer fix",
+            "security-checker security:check"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check": "script"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
