converted select field to vue-multiselect

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,7 @@
 api_platform:
+    graphql:
+        graphiql:
+            enabled: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     formats:
