--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
+        "webonyx/graphql-php": "^0.12.6",
         "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
