--- a/package.json
+++ b/package.json
@@ -89,8 +89,12 @@
     "root": true,
     "extends": [
       "plugin:vue/essential",
+      "plugin:prettier/recommended",
       "eslint:recommended"
-    ]
+    ],
+    "rules": {
+      "indent": ["error", 2]
+    }
   },
   "browserslist": [
     "> 1%"
