--- a/package.json
+++ b/package.json
@@ -60,14 +60,15 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "eslint": "5.9.0",
-    "eslint-config-prettier": "3.3.0",
-    "eslint-plugin-prettier": "3.0.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-vue": "^4.7.1",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.4.0",
+    "prettier": "1.15.2",
     "regenerator-runtime": "^0.12.1",
     "register-service-worker": "^1.5.2",
     "sass-loader": "^7.1.0",
@@ -84,13 +85,6 @@
     "serve": "encore dev-server --port=8001 --progress --disable-host-check",
     "build": "encore production --progress",
     "test": "jest"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ]
   },
   "browserslist": [
     "> 1%"
