--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ Vagrantfile
 ###< friendsofphp/php-cs-fixer ###
 
 
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
