--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "symfony/phpunit-bridge": "^4.1",
         "symfony/stopwatch": "^4.1",
         "symfony/web-profiler-bundle": "^4.1",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/web-server-bundle": "^4.1",
+        "symplify/easy-coding-standard": "^5.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
