--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.1.3",
     "codemirror": "^5.41.0",
-    "flagkit-web": "0.0.3",
+    "flagpack": "^0.5.1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "no-scroll": "^2.1.1",
