--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "api-platform/api-pack": "^1.1",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
+        "doctrine/common": "2.8.1",
         "erusev/parsedown": "^1.7",
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
