--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -301,15 +301,15 @@ blocks:
         content:
             type: html
             height: 150px
-        contentlink:
-            type: text
-            label: Link
-            placeholder: 'contenttype/slug or http://example.org/'
-            postfix: "Use this to add a link for this Block. This could either be an 'internal' link like <tt>page/about</tt>, if you use a contenttype/slug combination. Otherwise use a proper URL, like `http://example.org`."
-        image:
-            type: image
-            attrib: title
-            extensions: [ gif, jpg, png ]
+#        contentlink:
+#            type: text
+#            label: Link
+#            placeholder: 'contenttype/slug or http://example.org/'
+#            postfix: "Use this to add a link for this Block. This could either be an 'internal' link like <tt>page/about</tt>, if you use a contenttype/slug combination. Otherwise use a proper URL, like `http://example.org`."
+#        image:
+#            type: image
+#            attrib: title
+#            extensions: [ gif, jpg, png ]
     show_on_dashboard: true
     viewless: true
     default_status: published
