--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "codemirror": "^5.42.0",
     "flagpack": "^1.0.3",
     "jquery": "^3.3.1",
-    "moment": "^2.22.2",
+    "moment": "^2.23.0",
     "no-scroll": "^2.1.1",
+    "npm-check-updates": "^2.15.0",
     "popper.js": "^1.14.6",
     "simplemde": "^1.11.2",
     "tinycolor2": "^1.4.1",
-    "vue": "^2.5.20",
+    "vue": "^2.5.21",
     "vue-flatpickr-component": "^8.0.0",
     "vue-multiselect": "^2.1.3",
     "vue-notification": "^1.3.14",
@@ -48,7 +49,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
@@ -67,15 +68,15 @@
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.4.0",
+    "postcss-preset-env": "^6.5.0",
     "prettier": "1.15.3",
     "regenerator-runtime": "^0.13.1",
     "register-service-worker": "^1.5.2",
     "sass-loader": "^7.1.0",
-    "vue-jest": "^3.0.1",
+    "vue-jest": "^3.0.2",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.20",
+    "vue-template-compiler": "^2.5.21",
     "webpackbar": "^3.1.4",
     "workbox-webpack-plugin": "^3.6.3"
   },
