--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -41,6 +41,7 @@ homepage:
             uses: title
             group: meta
     viewless: true
+    taxonomy: [ categories, tags, foobars ]
     locales: ['en', 'nl', 'pt_BR', 'es']
     singleton: true
     default_status: published
