Working more on Taxonomies

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -334,11 +334,11 @@ dummies:
         selectfield:
             type: select
             values: [ foo, bar, baz ]
-        multiselect:
-            type: select
-            values: [ A-tuin, Donatello, Rafael, Leonardo, Michelangelo, Koopa, Squirtle ]
-            multiple: true
-            postfix: "Select your favourite turtle(s)."
+#        multiselect:
+#            type: select
+#            values: [ A-tuin, Donatello, Rafael, Leonardo, Michelangelo, Koopa, Squirtle ]
+#            multiple: true
+#            postfix: "Select your favourite turtle(s)."
     taxonomy: [ groups, categories, tags, foobars ]
     
 # Possible field types:
