improve docker config

--- a/.env.dist
+++ b/.env.dist
@@ -16,8 +16,11 @@ APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
 # SQLite
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
-# MySQL
-# DATABASE_URL=mysql://root:"password"@127.0.0.1:3306/bolt_skeleton
+# MySQL (with docker)
+#DATABASE_USER=bolt_db_user
+#DATABASE_PASSWORD=bolt_db_password
+#DATABASE_NAME=bolt
+#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@mysql:3306/bolt
 
 ###< doctrine/doctrine-bundle ###
 
