--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,15 +2,10 @@ parameters:
     # Adds a fallback DATABASE_URL if the env var is not set. This allows you
     # to run cache:warmup even if your environment variables are not available
     # yet. You should not need to change this value.
+    env(DATABASE_DRIVER): 'pdo_sqlite'
     env(DATABASE_URL): ''
 
 doctrine:
-    dbal:
-        driver: 'pdo_sqlite'
-        server_version: '3.15'
-        charset: utf8mb4
-        url: '%env(resolve:DATABASE_URL)%'
-
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
