--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Bolt 4 skeleton / prototype",
     "require": {
         "php": "^7.1.3",
-        "ext-pdo_sqlite": "*",
+        "ext-json": "*",
         "api-platform/api-pack": "^1.1",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
@@ -43,6 +43,7 @@
         "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
+        "ext-pdo_sqlite": "*",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.12",
