--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,6 @@ Vagrantfile
 .*.swp
 .swp
 *.lock
-!composer.lock
-!symfony.lock
 .buildpath
 .idea
 .vscode/*
@@ -45,12 +43,6 @@ Vagrantfile
 /public/bundles/
 /vendor/
 ###< symfony/framework-bundle ###
-
-###> symfony/phpunit-bridge ###
-.phpunit
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
@@ -64,3 +56,7 @@ Vagrantfile
 /.phpcs-cache
 /phpcs.xml
 ###< squizlabs/php_codesniffer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
