--- a/composer.json
+++ b/composer.json
@@ -46,14 +46,13 @@
         "ext-pdo_sqlite": "*",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "friendsofphp/php-cs-fixer": "^2.12",
         "phpstan/phpstan": "^0.10.3",
+        "phpunit/phpunit": "^7.0",
         "symfony/browser-kit": "^4.2",
         "symfony/css-selector": "^4.2",
         "symfony/debug-bundle": "^4.2",
         "symfony/dotenv": "^4.2",
         "symfony/maker-bundle": "^1.11",
-        "symfony/phpunit-bridge": "^4.2",
         "symfony/stopwatch": "^4.2",
         "symfony/web-profiler-bundle": "^4.2",
         "symfony/web-server-bundle": "^4.2",
@@ -77,7 +76,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Bolt\\Tests\\": "tests/php/"
         }
     },
     "scripts": {
