--- a/composer.json
+++ b/composer.json
@@ -24,27 +24,27 @@
         "nelmio/cors-bundle": "^1.5",
         "nesbot/carbon": "^1.34",
         "php-translation/symfony-bundle": "^0.8.1",
-        "phpdocumentor/reflection-docblock": "^3.0 || ^4.0",
+        "phpdocumentor/reflection-docblock": "^4.2",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^3.0 || ^4.0",
+        "symfony/asset": "^4.2",
         "symfony/console": "^4.2",
         "symfony/debug-bundle": "^4.2",
-        "symfony/expression-language": "^3.0 || ^4.0",
+        "symfony/expression-language": "^4.2",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.2",
         "symfony/framework-bundle": "^4.2",
         "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-php72": "^1.8",
-        "symfony/security-bundle": "^3.0 || ^4.0",
+        "symfony/security-bundle": "^4.2",
         "symfony/serializer": "^4.2",
         "symfony/stopwatch": "^4.2",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "^4.2",
         "symfony/twig-bundle": "^4.2",
-        "symfony/validator": "^3.0 || ^4.0",
+        "symfony/validator": "^4.2",
         "symfony/var-dumper": "^4.2",
         "symfony/web-profiler-bundle": "^4.2",
         "symfony/webpack-encore-bundle": "^1.0",
