Some minor JS cleanup (with Prettier)
`prettier --single-quote --write assets/js/app/editor/Components/**/*`

--- a/package.json
+++ b/package.json
@@ -86,6 +86,13 @@
     "build": "encore production --progress",
     "test": "jest"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ]
+  },
   "browserslist": [
     "> 1%"
   ],
