--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1.18
-      env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.2
     - php: 7.3
     - php: nightly
@@ -22,7 +21,7 @@ before_install:
   - composer self-update
 
 install:
-  - COMPOSER_MEMORY_LIMIT=-1 composer update $COMPOSER_FLAGS
+  - COMPOSER_MEMORY_LIMIT=-1 composer install $COMPOSER_FLAGS
   - nvm install 8.2
   - npm install
 
