--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,9 @@
         "ext-pdo_sqlite": "*",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "mockery/mockery": "^1.2",
+        "phpspec/phpspec": "^5.1",
+        "phpspec/prophecy": "^1.8",
         "phpstan/phpstan": "^0.10.3",
         "phpunit/phpunit": "^7.0",
         "symfony/browser-kit": "^4.2",
