--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
+dist: trusty
 sudo: false
+
+addons:
+  chrome: stable
 
 cache:
   directories:
@@ -24,6 +28,7 @@ install:
   - COMPOSER_MEMORY_LIMIT=-1 composer install $COMPOSER_FLAGS
   - nvm install 8.2
   - npm install
+  - cd tests/e2e && npm install && node ./node_modules/protractor/bin/webdriver-manager update --gecko=false
 
 script:
   # run PHP Unit / PHP Spec tests
@@ -46,3 +51,5 @@ script:
   - ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
   # run jest unit tests
   - npm test
+  # run e2e tests with Kakunin
+  - ./bin/console server:start *:8088 && cd tests/e2e && xvfb-run npm run kakunin
