--- a/.travis.yml
+++ b/.travis.yml
@@ -51,5 +51,7 @@ script:
   - ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
   # run jest unit tests
   - npm test
+  # test if server works
+  - ./bin/console server:start 127.0.0.1:8088 && wget "http://127.0.0.1:8088/bolt/login"
   # run e2e tests with Kakunin
   - ./bin/console server:start 127.0.0.1:8088 && cd tests/e2e && npm run kakunin && cd ../..
