--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ install:
   - cd tests/e2e && npm install && node ./node_modules/protractor/bin/webdriver-manager update --gecko=false && cd ../..
 
 script:
+  # test if server works
+  - ./bin/console server:start 127.0.0.1:8088 && sleep 3 && wget "http://127.0.0.1:8088/bolt/login"
   # run PHP Unit / PHP Spec tests
   - ./vendor/bin/phpunit
   - ./vendor/bin/phpspec run
@@ -51,7 +53,5 @@ script:
   - ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
   # run jest unit tests
   - npm test
-  # test if server works
-  - ./bin/console server:start 127.0.0.1:8088 && wget "http://127.0.0.1:8088/bolt/login"
   # run e2e tests with Kakunin
   - ./bin/console server:start 127.0.0.1:8088 && cd tests/e2e && npm run kakunin && cd ../..
