--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,5 +32,6 @@ security:
     access_control:
         # this is a catch-all for the admin area
         # additional security lives in the controllers
+        # @todo make admin area prefix configurable
         - { path: '^/bolt', roles: ROLE_ADMIN }
         - { path: '^/(%app_locales%)/bolt', roles: ROLE_ADMIN }
