--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ before_script:
   - ./bin/console doctrine:fixtures:load -n
   - ./bin/console server:start 127.0.0.1:8088
   # test if web server works
-  - sleep 30
+  - sleep 3
+  - wget "http://127.0.0.1:8088/"
   - wget "http://127.0.0.1:8088/bolt/login"
 
 script:
