--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,10 +1,12 @@
 api_platform:
+    enable_swagger_ui: false # route redirected manually to /bolt/api
     graphql:
         graphiql:
             enabled: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     formats:
+        jsonld:   ['application/ld+json']
         json:     ['application/json']
         jsonapi:  ['application/vnd.api+json']
         html:     ['text/html']
