--- a/.env.dist
+++ b/.env.dist
@@ -17,10 +17,11 @@ APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
 # MySQL (with docker)
+#DATABASE_HOST=database
 #DATABASE_USER=bolt_db_user
 #DATABASE_PASSWORD=bolt_db_password
 #DATABASE_NAME=bolt
-#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@mysql:3306/bolt
+#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@database:3306/bolt
 
 ###< doctrine/doctrine-bundle ###
 
