Fix Taxonomy tests

--- a/.env.dist
+++ b/.env.dist
@@ -17,6 +17,7 @@ APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
 # MySQL (with docker)
+#DATABASE_HOST=database
 #DATABASE_USER=bolt_db_user
 #DATABASE_PASSWORD=bolt_db_password
 #DATABASE_NAME=bolt
