--- a/.env.dist
+++ b/.env.dist
@@ -21,7 +21,7 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 #DATABASE_USER=bolt_db_user
 #DATABASE_PASSWORD=bolt_db_password
 #DATABASE_NAME=bolt
-#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@mysql:3306/bolt
+#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@database:3306/bolt
 
 ###< doctrine/doctrine-bundle ###
 
