--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "type": "project",
     "description": "Bolt 4 skeleton / prototype",
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.1.3",
         "ext-json": "*",
         "api-platform/core": "^2.1",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^1.6.10",
+        "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5.11",
         "easycorp/easy-log-handler": "^1.0.7",
@@ -23,7 +23,7 @@
         "miljar/php-exif": "^0.6.4",
         "nelmio/cors-bundle": "^1.5",
         "nesbot/carbon": "^1.34",
-        "php-translation/symfony-bundle": "^0.8.1",
+        "php-translation/symfony-bundle": "^0.8",
         "phpdocumentor/reflection-docblock": "^4.2",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
@@ -49,7 +49,7 @@
         "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
-        "webonyx/graphql-php": "^0.13.0",
+        "webonyx/graphql-php": "^0.13",
         "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
@@ -64,7 +64,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "lakion/mink-debug-extension": "^1.2",
         "phpspec/phpspec": "^5.1",
-        "phpstan/phpstan": "^0.10.3",
+        "phpstan/phpstan": "^0.11",
         "phpunit/phpunit": "^7.0",
         "roave/security-advisories": "dev-master@dev",
         "symfony/browser-kit": "^4.2",
