--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@ parameters:
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: en|nl|nl_NL|nl_BE|es|fr|de|pl|it|pt_BR
     app.notifications.email_sender: anonymous@example.com
+    doctrine.orm.entity_manager.class: Bolt\Doctrine\TranslatableEntityManager
 
 services:
     # default configuration for services in *this* file
